--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -31,9 +31,8 @@ android {
         noCompress "tflite"
         noCompress "lite"
     }
-
-    compileSdkVersion 28
-
+    compileSdkVersion 31
+    ndkVersion "23.0.7599858"
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
@@ -46,7 +45,7 @@ android {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.FaceNet"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
     }
