--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
 org.gradle.jvmargs=-Xmx1536M
-android.enableR8=true
+org.gradle.java.home=C:\\Program Files\\Android\\Android Studio\\jre
 android.useAndroidX=true
 android.enableJetifier=true
